--- a/doc/paper/paper.bib
+++ b/doc/paper/paper.bib
@@ -308,3 +308,16 @@
   year={2001},
   publisher={Taylor \& Francis}
 }
+@book{DBLP:books/daglib/0030198,
+  author       = {Wilfrid Hodges},
+  title        = {A Shorter Model Theory},
+  publisher    = {Cambridge University Press},
+  year         = {1997}
+}
+@book{DBLP:books/aw/RN2020,
+  author       = {Stuart Russell and
+                  Peter Norvig},
+  title        = {Artificial Intelligence: {A} Modern Approach (4th Edition)},
+  publisher    = {Pearson},
+  year         = {2020}
+}
