Some of the preparations for a new set of experiments (including scaling FastWFOMC domains exponentially, since it's faster now)

--- a/doc/paper/paper.tex
+++ b/doc/paper/paper.tex
@@ -991,6 +991,8 @@ and return it.
 
 % TODO: update info about hardware, timeout, and the new domain sequences
 
+% TODO: for FastWFOMC, we also increase domain sizes exponentially
+
 We compared \Cranetwo{}\footnote{\textsc{Crane} has two modes that decide how
   compilation rules are applied to formulas: one that uses greedy search and
   another that combines greedy and breadth-first search. In our experiments, we
