--- a/doc/paper/paper.tex
+++ b/doc/paper/paper.tex
@@ -962,49 +962,100 @@ $\mathbf{c}$ based on the expression $\expr{}$, store the result in the cache,
 and return it.
 
 \section{Experimental Evaluation}\label{sec:experiments}
-% TODO: this section is apparently "hard to follow"
 
-% TODO: Compilation time is included in the experimental results, and the
-% differences between compilation and inference time are delineated in the
-% second-to-last paragraph of Section 6.
+% TODO: 1. Introduction
+% Objective: Briefly state the goals of the experiments.
+% Overview: Summarize the structure of the section.
 
-% TODO: (here or in the introduction) C++ code generation is necessary for any
-% runtime experiments because without it the algorithm is "incomplete" as
-% explained above.
+\begin{itemize}
+  \item Note that it would not make sense to experimentally evaluate \Cranetwo{}
+        without the C++ code generation described in \cref{sec:cpp} because the
+        algorithm would only produce mathematical definitions of functions.
+\end{itemize}
 
-% TODO: The asymptotic analysis of the total number of arithmetic operations
-% required to compute the FOMC of these formulas was already performed in
-% previous work.
+% TODO: 2. Experimental Setup
 
-% TODO: Since FastWFOMC does not support many-sorted logic, our experiments were
-% restricted to formulas with a single domain. However, many of the counting
-% problems examined in [1] become equivalent (in the sense that they generate
-% the same integer sequences) when restricted to a single domain. Moreover, it
-% is challenging to compare Crane2 and FastWFOMC on a larger set of problems
-% because each problem has to be represented in two (fairly different) logics:
-% \FO{} and \UFO{}.
+% Environment: Describe the hardware and software environment (e.g.,
+% specifications of the computer, operating system, libraries, and tools used).
 
-% TODO: update info about hardware, timeout, and the new domain sequences
+\begin{itemize}
+  \item The experiments were run on an Intel Skylake \SI{2.4}{\giga\hertz} CPU
+        with \SI{188}{\gibi\byte} of memory and CentOS~7 operating system. C++
+        programs were compiled using the Intel C++ Compiler 2020u4.
+        \textsc{FastWFOMC} was run on Julia~1.10.4, while all other algorithms
+        were run on the Java Virtual Machine 1.8.0\_201.
+\end{itemize}
 
-% TODO: domains increase exponentially for all algorithms
+% Datasets: Provide details about the datasets used in the experiments,
+% including size, source, and any preprocessing steps.
 
-% TODO: mention/update hardware info and modules loaded
+\begin{itemize}
+  \item The asymptotic analysis of the total number of arithmetic operations
+        required to compute the FOMC of some of these formulas was already
+        performed in previous work~\cite{DBLP:conf/kr/DilkasB23}.
+  \item Since FastWFOMC does not support many-sorted logic, our experiments were
+        restricted to formulas with a single domain. However, many of the
+        counting problems examined in [1] become equivalent (in the sense that
+        they generate the same integer sequences) when restricted to a single
+        domain. Moreover, it is challenging to compare Crane2 and FastWFOMC on a
+        larger set of problems because each problem has to be represented in two
+        (fairly different) logics: \FO{} and \UFO{}.
+  \item It is important to note that comparing \Cranetwo{} and
+        \textsc{FastWFOMC} on a more substantial set of benchmarks is
+        challenging because there is no automated way to translate a formula in
+        \FO{} or \Ctwo{} into \UFO{}, or even check if such an encoding is
+        possible.
+\end{itemize}
 
-We compared \Cranetwo{}\footnote{\textsc{Crane} has two modes that decide how
-  compilation rules are applied to formulas: one that uses greedy search and
-  another that combines greedy and breadth-first search. In our experiments, we
-  refer to these modes as \Cranegreedy{} and \Cranebfs{}, respectively.} with
-\textsc{FastWFOMC} and \textsc{ForcLift} on two problems previously considered
-by \citeauthor{DBLP:conf/kr/DilkasB23}~\shortcite{DBLP:conf/kr/DilkasB23}. The
+% Baselines: List and describe the baseline methods or systems used for
+% comparison.
+
+\begin{itemize}
+  \item \textsc{Crane} has two modes that decide how compilation rules are
+        applied to formulas: one that uses greedy search and another that
+        combines greedy and breadth-first search. In our experiments, we refer
+        to these modes as \Cranegreedy{} and \Cranebfs{}, respectively.
+\end{itemize}
+
+% Metrics: Define the performance metrics used to evaluate the results (e.g.,
+% accuracy, precision, recall, F1-score, runtime).
+
+\begin{itemize}
+  \item Compilation time is included in the experimental results, and the
+        differences between compilation and inference time are delineated in the
+        second-to-last paragraph of Section 6.
+  \item We run each algorithm on each benchmark on domains of size
+        $2^{0}, 2^{1}, 2^{2},\dots$ until the algorithm times out after
+        \SI{1}{\hour}, runs out of memory, or (in the case of \textsc{ForcLift})
+        returns $\infty$.
+\end{itemize}
+
+% TODO: 3. Results and Analysis
+% Presentation of Results: Use tables, graphs, and charts to present the experimental results clearly.
+% Comparison with Baselines: Compare your method’s results with the baselines.
+% Discussion: Analyze and interpret the results, highlighting the strengths and potential weaknesses of your approach.
+% Insights: Provide insights or patterns observed from the results.
+% Challenges: Discuss any challenges or unexpected outcomes.
+% Acknowledgement: Honestly acknowledge any limitations of your experiments or method.
+
+\begin{itemize}
+  \item It is important to note that while \textsc{ForcLift} may have runtime
+        performance comparable to \Cranetwo{}, its finite-precision arithmetic
+        cannot represent model counts for domain sizes greater than 143 and
+        returns $\infty$ instead.
+\end{itemize}
+
+% TODO: 8. Conclusion
+% Summary: Briefly summarize the key findings from the experimental results.
+% Future Work: Suggest directions for future research based on your findings.
+
+
+
+We compare \Cranetwo{} with \textsc{FastWFOMC} and \textsc{ForcLift} on two
+problems previously considered by
+\citeauthor{DBLP:conf/kr/DilkasB23}~\shortcite{DBLP:conf/kr/DilkasB23}. The
 first problem is the function-counting problem from \cref{example:functions},
-and the second problem is the bijection-counting problem described below. It is
-important to note that comparing \Cranetwo{} and \textsc{FastWFOMC} on a more
-substantial set of benchmarks is challenging because there is no automated way
-to translate a formula in \FO{} or \Ctwo{} into \UFO{}, or even check if such an
-encoding is possible. We ran the experiments on an AMD~Ryzen~7~5800H processor
-with \SI{16}{\gibi\byte} of memory and Arch Linux~6.8.2-arch2-1 operating
-system. \textsc{FastWFOMC} was executed using Python~3.8.19 with
-Python-FLINT~0.5.0.
+and the second problem is the bijection-counting problem described below.
 
 The \FO{} formula for bijections is described in \cref{example:overall}. The
 equivalent formula in \Ctwo{} is
@@ -1023,13 +1074,11 @@ where $w^{-}(R) = w^{-}(S) = -1$.
 \begin{figure*}[t]
   \centering
   \includegraphics{plot.pdf}
-  \caption{The running time of WFOMC algorithms. Note that the $y$-axis is on a
-    logarithmic scale.}\label{fig:plot}
+  \caption{The runtime of the algorithms as a function of the domain size. Note
+    that both axes are on a logarithmic scale.}\label{fig:plot}
 \end{figure*}
 
-In the first experiment, we ran each of the four algorithms once on each
-combination of benchmark and domain size, ranging from one up to and including
-35. \Cref{fig:plot} shows the total runtime values as a measure of the overall
+\Cref{fig:plot} shows the total runtime values as a measure of the overall
 performance of each algorithm. We also separately tracked compilation and
 inference times and commented on them where relevant. It is worth noting that
 \Cranebfs{} can handle more instances than either \textsc{ForcLift} or
@@ -1048,37 +1097,6 @@ only \SI{4}{\milli\second}. The runtimes of \Cranetwo{} have lower variation
 than those of \textsc{ForcLift} because we compile the formula anew for each
 domain size with \textsc{ForcLift}, whereas with \Cranetwo{}, we compile it once
 and reuse the resulting C++ program for all domain sizes.
-% TODO: The lines for Crane2 in Figure 4 appear to be completely flat whereas
-% the line for ForcLift has some slight fluctuations. We refer to these
-% fluctuations as variance.
-
-\begin{table}[t]
-  \centering
-  \begin{tabular}{lrr}
-    \toprule
-    Algorithm & Bijections & Functions \\
-    \midrule
-    \Cranebfs{} & \num{e4} & \num{3e5} \\
-    \Cranegreedy{} & --- & \num{3e5} \\
-    \textsc{FastWFOMC} & 28 & 32 \\
-    \textsc{ForcLift} & --- & 143 \\
-    \bottomrule
-  \end{tabular}
-  \caption{The maximum domain sizes that each algorithm can handle within
-    \SI{45}{\second}. A dash symbol `---' indicates that the algorithm was
-    unable to find a solution. The domain sizes for \Cranetwo{} are accurate up
-    to the first digit, while the domain sizes for the other domain sizes are
-    exact.}\label{table:results}
-\end{table}
-
-For the second experiment, we examined the maximum domain size the algorithms
-can handle in at most \SI{45}{\second} of total runtime. As shown in
-\cref{table:results}, \Cranebfs{} can scale to domain sizes \num{357} and
-\num{9375} times larger than \textsc{FastWFOMC} for the bijection-counting and
-function-counting problems, respectively. It is important to note that while
-\textsc{ForcLift} may have runtime performance comparable to \Cranetwo{}, its
-finite-precision arithmetic cannot represent model counts for domain sizes
-greater than 143 and returns $\infty$ instead.
 
 \section{Conclusion and Future Work}
 
